fixing to show all cities, and indicate when no availability. fix bug in standalone, not showing the right מחוז for admins

--- a/src/App.css
+++ b/src/App.css
@@ -104,11 +104,21 @@
   max-width: 700px;
   width: 700px;
   padding: 50px;
-  padding-top: 20px;
 
   border-radius: 10px;
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
 
+}
+
+.clickable-span {
+  color: #007bff;         /* Change color to typical link color */
+  text-decoration: underline; /* Add underline like links */
+  cursor: pointer;        /* Change cursor to pointer */
+}
+
+.clickable-span:hover {
+  color: #0056b3;         /* Darken the color on hover */
+  text-decoration: none;  /* Optionally remove underline on hover */
 }
 
 /* styles.css */
