--- a/src/registration.css
+++ b/src/registration.css
@@ -11,7 +11,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding-top: 40px;
 }
 
 .standalone-text-desc {
